--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "fooforms-mobile",
   "version": "1.0.0",
   "description": "fooforms-mobile: An Ionic project",
+  "repository": "git@github.com:ruairitobrien/fooforms-mobile.git",
   "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^0.7.1",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
-  "devDependencies": {
-    "bower": "^1.3.3",
+    "bower": "^1.3.12",
+    "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.1",
     "gulp-uglify": "^1.0.2",
-    "gulp-util": "^2.2.14",
+    "gulp-util": "^3.0.0",
+    "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
     "shelljs": "^0.3.0"
